syntax = "proto3";

package sample;

option go_package = "pb";
option java_package = "org.example.sample.pb";
option java_multiple_files = true;

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string message = 1;
}

service GreetingService {
  rpc SayHello(GreetingRequest) returns (GreetingResponse) {};
}